test/visibility/only/onlyModuleItself.good
onlyModuleItself.chpl:6: In function 'main':
onlyModuleItself.chpl:7: error: cannot use 'only' clause with symbol 'Toolbox' as it is not defined in 'Toolbox'
